testsuite/resolution/compile-fail/module/child.verona
class A {
  m(x: T) {}
}
